compodoc and eslint is done

--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -1,7 +1,7 @@
 <his-header
   [value]="value"
   [isSearchDisabled]="isSearchDisabled"
-  (change)="onChange($event)"
+  (RowChange)="onChange($event)"
   (search)="onSearch($event)"
 ></his-header>
 <hr />
